// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exporters.motion > comet × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1d0hoyi-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-1d0hoyi-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-1d0hoyi-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
.sk-1d0hoyi-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1d0hoyi * {
    animation: none;
  }
  .sk-1d0hoyi-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1d0hoyi-1 {
    stroke-dasharray: none;
  }
  .sk-1d0hoyi-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1d0hoyi-3 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1d0hoyi-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1d0hoyi-1",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1d0hoyi-2",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1d0hoyi-3",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1d0hoyi \${className}\` : "sk-1d0hoyi"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1d0hoyi-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1d0hoyi-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1d0hoyi-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1d0hoyi-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1d0hoyi-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > comet × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-fd5v37-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.2 0.8;
  stroke-dashoffset: 1;
}
@media (prefers-reduced-motion: reduce) {
  .sk-fd5v37 * {
    animation: none;
  }
  .sk-fd5v37-0 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-fd5v37-0",
    keyframes: {
      strokeDashoffset: [1, 0],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-fd5v37 \${className}\` : "sk-fd5v37"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-fd5v37-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-fd5v37-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > draw-fill × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-2vod6w-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-2vod6w-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-2vod6w-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
.sk-2vod6w-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-2vod6w * {
    animation: none;
  }
  .sk-2vod6w-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-2 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-3 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-2vod6w-0",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-2vod6w-1",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-2vod6w-2",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-2vod6w-3",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-2vod6w \${className}\` : "sk-2vod6w"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-2vod6w-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-2vod6w-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-2vod6w-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-2vod6w-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-2vod6w-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > draw-fill × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1kk6it-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1kk6it * {
    animation: none;
  }
  .sk-1kk6it-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1kk6it-0",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1kk6it \${className}\` : "sk-1kk6it"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1kk6it-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1kk6it-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > fade × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1m7e46k-0 {
  opacity: 0;
  transform: translate(0px, 8px);
}
@media (prefers-reduced-motion: reduce) {
  .sk-1m7e46k * {
    animation: none;
  }
  .sk-1m7e46k-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1m7e46k-0",
    keyframes: {
      opacity: [0, 1],
      transform: ["translate(0px, 8px)", "translate(0px, 0px)"],
    },
    options: {
      duration: 0.9,
      delay: 0,
      ease: "easeOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1m7e46k \${className}\` : "sk-1m7e46k"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-1m7e46k-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-1m7e46k-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-1m7e46k-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-1m7e46k-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-1m7e46k-0" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > fade × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-q6wj0z-0 {
  opacity: 0;
  transform: translate(0px, 9.6px);
}
@media (prefers-reduced-motion: reduce) {
  .sk-q6wj0z * {
    animation: none;
  }
  .sk-q6wj0z-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-q6wj0z-0",
    keyframes: {
      opacity: [0, 1],
      transform: ["translate(0px, 9.6px)", "translate(0px, 0px)"],
    },
    options: {
      duration: 0.9,
      delay: 0,
      ease: "easeOut",
      times: [0, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-q6wj0z \${className}\` : "sk-q6wj0z"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-q6wj0z-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-q6wj0z-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > march × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1m4q023-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-1m4q023-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-1m4q023-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
.sk-1m4q023-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1m4q023 * {
    animation: none;
  }
  .sk-1m4q023-0 {
    fill-opacity: 1;
  }
  .sk-1m4q023-2 {
    fill-opacity: 1;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1m4q023-0",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1m4q023-1",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1m4q023-2",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-1m4q023-3",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1m4q023 \${className}\` : "sk-1m4q023"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1m4q023-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1m4q023-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1m4q023-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1m4q023-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1m4q023-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > march × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-cjkjvo-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.0408 0.0306;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-cjkjvo * {
    animation: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-cjkjvo-0",
    keyframes: {
      strokeDashoffset: [0, -0.0714],
    },
    options: {
      duration: 0.8,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-cjkjvo \${className}\` : "sk-cjkjvo"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-cjkjvo-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-cjkjvo-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > pulse × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1dlywms-0 {
  transform-box: fill-box;
  transform-origin: center;
  opacity: 1;
  transform: scale(1);
}
@media (prefers-reduced-motion: reduce) {
  .sk-1dlywms * {
    animation: none;
  }
  .sk-1dlywms-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1dlywms-0",
    keyframes: {
      opacity: [1, 0.5, 1],
      scale: [1, 1.06, 1],
    },
    options: {
      duration: 1.4,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.5, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1dlywms \${className}\` : "sk-1dlywms"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-1dlywms-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-1dlywms-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-1dlywms-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-1dlywms-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-1dlywms-0" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > pulse × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-qlcd7t-0 {
  transform-box: fill-box;
  transform-origin: center;
  opacity: 1;
  transform: scale(1);
}
@media (prefers-reduced-motion: reduce) {
  .sk-qlcd7t * {
    animation: none;
  }
  .sk-qlcd7t-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-qlcd7t-0",
    keyframes: {
      opacity: [1, 0.5, 1],
      scale: [1, 1.06, 1],
    },
    options: {
      duration: 1.4,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.5, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-qlcd7t \${className}\` : "sk-qlcd7t"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-qlcd7t-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-qlcd7t-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > shine × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-i8favz-0 {
  transform: translate(-61.397px, 50px) skewX(20deg);
}
.sk-i8favz-1 {
  stop-color: var(--sk-shine, #fff);
}
@media (prefers-reduced-motion: reduce) {
  .sk-i8favz * {
    animation: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-i8favz-0",
    keyframes: {
      transform: ["translate(-61.397px, 50px) skewX(20deg)", "translate(261.397px, 50px) skewX(20deg)", "translate(261.397px, 50px) skewX(20deg)"],
    },
    options: {
      duration: 1.6,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-i8favz \${className}\` : "sk-i8favz"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" />
      <defs>
        <clipPath id="sk-i8favz-t0-clip">
          <path d="M10 90 L40 10 L70 90 Z" transform="matrix(1 0 0 1 0 0)" />
          <ellipse cx="170" cy="70" rx="12" ry="8" transform="matrix(1 0 0 1 0 0)" />
        </clipPath>
        <linearGradient id="sk-i8favz-t0-grad" x1="0" y1="0" x2="1" y2="0">
          <stop offset="0" stopOpacity="0" className="sk-i8favz-1" />
          <stop offset="0.5" stopOpacity="0.6" className="sk-i8favz-1" />
          <stop offset="1" stopOpacity="0" className="sk-i8favz-1" />
        </linearGradient>
      </defs>
      <g clipPath="url(#sk-i8favz-t0-clip)" pointerEvents="none" aria-hidden="true">
        <rect x="-25" y="-100" width="50" height="200" fill="url(#sk-i8favz-t0-grad)" className="sk-i8favz-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > shine × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
@media (prefers-reduced-motion: reduce) {
  .sk-llztk4 * {
    animation: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-llztk4 \${className}\` : "sk-llztk4"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" />
        <path d="M36 64 L56 84 L88 40" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > spin × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-pqdy25-0 {
  transform-box: view-box;
  transform-origin: 100px 50px;
  transform: rotate(0deg);
}
@media (prefers-reduced-motion: reduce) {
  .sk-pqdy25 * {
    animation: none;
  }
  .sk-pqdy25-0 {
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-pqdy25-0",
    keyframes: {
      transform: ["rotate(0deg)", "rotate(360deg)"],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-pqdy25 \${className}\` : "sk-pqdy25"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-pqdy25-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-pqdy25-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-pqdy25-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-pqdy25-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-pqdy25-0" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > spin × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-jxp1w8-0 {
  transform-box: view-box;
  transform-origin: 60px 60px;
  transform: rotate(0deg);
}
@media (prefers-reduced-motion: reduce) {
  .sk-jxp1w8 * {
    animation: none;
  }
  .sk-jxp1w8-0 {
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-jxp1w8-0",
    keyframes: {
      transform: ["rotate(0deg)", "rotate(360deg)"],
    },
    options: {
      duration: 1.5,
      delay: 0,
      ease: "linear",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-jxp1w8 \${className}\` : "sk-jxp1w8"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-jxp1w8-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-jxp1w8-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.motion > yoyo × illustrator-classes.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1xkr75m-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-1xkr75m-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-1xkr75m-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
.sk-1xkr75m-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1xkr75m * {
    animation: none;
  }
  .sk-1xkr75m-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1xkr75m-1 {
    stroke-dasharray: none;
  }
  .sk-1xkr75m-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1xkr75m-3 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1xkr75m-0",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-1xkr75m-1",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-1xkr75m-2",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
  {
    selector: ".sk-1xkr75m-3",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1xkr75m \${className}\` : "sk-1xkr75m"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1xkr75m-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1xkr75m-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1xkr75m-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1xkr75m-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1xkr75m-3" />
    </svg>
  );
}
"
`;

exports[`exporters.motion > yoyo × simple-stroke.svg 1`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1b7jnm9-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.25 1;
  stroke-dashoffset: 0;
}
@media (prefers-reduced-motion: reduce) {
  .sk-1b7jnm9 * {
    animation: none;
  }
  .sk-1b7jnm9-0 {
    stroke-dasharray: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-1b7jnm9-0",
    keyframes: {
      strokeDashoffset: [0, -0.75],
    },
    options: {
      duration: 1.2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "reverse",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1b7jnm9 \${className}\` : "sk-1b7jnm9"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1b7jnm9-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1b7jnm9-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > comet × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1d0hoyi-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  animation: sk-1d0hoyi-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1d0hoyi-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.2 0.8;
  animation: sk-1d0hoyi-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1d0hoyi-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.2 0.8;
  animation: sk-1d0hoyi-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1d0hoyi-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.2 0.8;
  animation: sk-1d0hoyi-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1d0hoyi-t0-comet {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1d0hoyi * {
    animation: none;
  }
  .sk-1d0hoyi-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1d0hoyi-1 {
    stroke-dasharray: none;
  }
  .sk-1d0hoyi-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1d0hoyi-3 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1d0hoyi \${className}\` : "sk-1d0hoyi"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1d0hoyi-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1d0hoyi-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1d0hoyi-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1d0hoyi-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1d0hoyi-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > comet × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-fd5v37-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.2 0.8;
  animation: sk-fd5v37-t0-comet calc(1600ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-fd5v37-t0-comet {
  0% {
    stroke-dashoffset: 1;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-fd5v37 * {
    animation: none;
  }
  .sk-fd5v37-0 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-fd5v37 \${className}\` : "sk-fd5v37"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-fd5v37-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-fd5v37-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > draw-fill × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-2vod6w-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-2vod6w-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-2vod6w-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 1 1;
  animation: sk-2vod6w-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-2vod6w-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-2vod6w-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-2vod6w-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 1 1;
  animation: sk-2vod6w-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-2vod6w-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-2vod6w * {
    animation: none;
  }
  .sk-2vod6w-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-2 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-2vod6w-3 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-2vod6w \${className}\` : "sk-2vod6w"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-2vod6w-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-2vod6w-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-2vod6w-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-2vod6w-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-2vod6w-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > draw-fill × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1kk6it-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 1 1;
  animation: sk-1kk6it-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1kk6it-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1kk6it * {
    animation: none;
  }
  .sk-1kk6it-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1kk6it \${className}\` : "sk-1kk6it"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1kk6it-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1kk6it-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > fade × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1m7e46k-0 {
  animation: sk-1m7e46k-t0-fade calc(900ms / var(--sk-speed, 1)) ease-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1m7e46k-t0-fade {
  0% {
    opacity: 0;
    transform: translate(0px, 8px);
  }
  100% {
    opacity: 1;
    transform: translate(0px, 0px);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1m7e46k * {
    animation: none;
  }
  .sk-1m7e46k-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1m7e46k \${className}\` : "sk-1m7e46k"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-1m7e46k-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-1m7e46k-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-1m7e46k-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-1m7e46k-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-1m7e46k-0" />
    </svg>
  );
}
"
`;

exports[`exporters.react > fade × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-q6wj0z-0 {
  animation: sk-q6wj0z-t0-fade calc(900ms / var(--sk-speed, 1)) ease-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-q6wj0z-t0-fade {
  0% {
    opacity: 0;
    transform: translate(0px, 9.6px);
  }
  100% {
    opacity: 1;
    transform: translate(0px, 0px);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-q6wj0z * {
    animation: none;
  }
  .sk-q6wj0z-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-q6wj0z \${className}\` : "sk-q6wj0z"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-q6wj0z-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-q6wj0z-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > march × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1m4q023-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1m4q023-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1m4q023-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1m4q023-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1m4q023-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1m4q023-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1m4q023-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-1m4q023-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1m4q023-t0-march {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.0714;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1m4q023 * {
    animation: none;
  }
  .sk-1m4q023-0 {
    fill-opacity: 1;
  }
  .sk-1m4q023-2 {
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1m4q023 \${className}\` : "sk-1m4q023"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1m4q023-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1m4q023-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1m4q023-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1m4q023-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1m4q023-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > march × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-cjkjvo-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.0408 0.0306;
  animation: sk-cjkjvo-t0-march calc(800ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-cjkjvo-t0-march {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.0714;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-cjkjvo * {
    animation: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-cjkjvo \${className}\` : "sk-cjkjvo"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-cjkjvo-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-cjkjvo-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > pulse × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1dlywms-0 {
  transform-box: fill-box;
  transform-origin: center;
  animation: sk-1dlywms-t0-pulse calc(1400ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1dlywms-t0-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1dlywms * {
    animation: none;
  }
  .sk-1dlywms-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1dlywms \${className}\` : "sk-1dlywms"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-1dlywms-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-1dlywms-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-1dlywms-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-1dlywms-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-1dlywms-0" />
    </svg>
  );
}
"
`;

exports[`exporters.react > pulse × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-qlcd7t-0 {
  transform-box: fill-box;
  transform-origin: center;
  animation: sk-qlcd7t-t0-pulse calc(1400ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-qlcd7t-t0-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-qlcd7t * {
    animation: none;
  }
  .sk-qlcd7t-0 {
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-qlcd7t \${className}\` : "sk-qlcd7t"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-qlcd7t-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-qlcd7t-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > shine × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-i8favz-0 {
  transform: translate(-61.397px, 50px) skewX(20deg);
  animation: sk-i8favz-t0-shine calc(1600ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-i8favz-1 {
  stop-color: var(--sk-shine, #fff);
}
@keyframes sk-i8favz-t0-shine {
  0% {
    transform: translate(-61.397px, 50px) skewX(20deg);
  }
  60% {
    transform: translate(261.397px, 50px) skewX(20deg);
  }
  100% {
    transform: translate(261.397px, 50px) skewX(20deg);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-i8favz * {
    animation: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-i8favz \${className}\` : "sk-i8favz"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" />
      <defs>
        <clipPath id="sk-i8favz-t0-clip">
          <path d="M10 90 L40 10 L70 90 Z" transform="matrix(1 0 0 1 0 0)" />
          <ellipse cx="170" cy="70" rx="12" ry="8" transform="matrix(1 0 0 1 0 0)" />
        </clipPath>
        <linearGradient id="sk-i8favz-t0-grad" x1="0" y1="0" x2="1" y2="0">
          <stop offset="0" stopOpacity="0" className="sk-i8favz-1" />
          <stop offset="0.5" stopOpacity="0.6" className="sk-i8favz-1" />
          <stop offset="1" stopOpacity="0" className="sk-i8favz-1" />
        </linearGradient>
      </defs>
      <g clipPath="url(#sk-i8favz-t0-clip)" pointerEvents="none" aria-hidden="true">
        <rect x="-25" y="-100" width="50" height="200" fill="url(#sk-i8favz-t0-grad)" className="sk-i8favz-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > shine × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
@media (prefers-reduced-motion: reduce) {
  .sk-llztk4 * {
    animation: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-llztk4 \${className}\` : "sk-llztk4"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" />
        <path d="M36 64 L56 84 L88 40" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > spin × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-pqdy25-0 {
  transform-box: view-box;
  transform-origin: 100px 50px;
  animation: sk-pqdy25-t0-spin calc(1500ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-pqdy25-t0-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-pqdy25 * {
    animation: none;
  }
  .sk-pqdy25-0 {
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-pqdy25 \${className}\` : "sk-pqdy25"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" className="sk-pqdy25-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" className="sk-pqdy25-0" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" className="sk-pqdy25-0" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" className="sk-pqdy25-0" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" className="sk-pqdy25-0" />
    </svg>
  );
}
"
`;

exports[`exporters.react > spin × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-jxp1w8-0 {
  transform-box: view-box;
  transform-origin: 60px 60px;
  animation: sk-jxp1w8-t0-spin calc(1500ms / var(--sk-speed, 1)) linear 0ms var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-jxp1w8-t0-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-jxp1w8 * {
    animation: none;
  }
  .sk-jxp1w8-0 {
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-jxp1w8 \${className}\` : "sk-jxp1w8"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" className="sk-jxp1w8-0" />
        <path d="M36 64 L56 84 L88 40" className="sk-jxp1w8-0" />
      </g>
    </svg>
  );
}
"
`;

exports[`exporters.react > yoyo × illustrator-classes.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1xkr75m-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  animation: sk-1xkr75m-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1xkr75m-1 {
  stroke: var(--sk-stroke, #1D1D1B);
  stroke-dasharray: 0.25 1;
  animation: sk-1xkr75m-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1xkr75m-2 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  fill-opacity: 0.2;
  stroke-dasharray: 0.25 1;
  animation: sk-1xkr75m-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-1xkr75m-3 {
  stroke: var(--sk-stroke, #10b981);
  stroke-dasharray: 0.25 1;
  animation: sk-1xkr75m-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1xkr75m-t0-yoyo {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.75;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1xkr75m * {
    animation: none;
  }
  .sk-1xkr75m-0 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1xkr75m-1 {
    stroke-dasharray: none;
  }
  .sk-1xkr75m-2 {
    stroke-dasharray: none;
    fill-opacity: 1;
  }
  .sk-1xkr75m-3 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-1xkr75m \${className}\` : "sk-1xkr75m"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-1xkr75m-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1xkr75m-1" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" pathLength="1" className="sk-1xkr75m-1" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-1xkr75m-2" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" pathLength="1" className="sk-1xkr75m-3" />
    </svg>
  );
}
"
`;

exports[`exporters.react > yoyo × simple-stroke.svg 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-1b7jnm9-0 {
  stroke: var(--sk-stroke, #1d4ed8);
  stroke-dasharray: 0.25 1;
  animation: sk-1b7jnm9-t0-yoyo calc(1200ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, infinite) alternate both;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-1b7jnm9-t0-yoyo {
  0% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -0.75;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-1b7jnm9 * {
    animation: none;
  }
  .sk-1b7jnm9-0 {
    stroke-dasharray: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 120 120"
      width={size ?? 120}
      height={size ?? 120}
      className={className ? \`sk-1b7jnm9 \${className}\` : "sk-1b7jnm9"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <title>{"Anel e seta"}</title>
      <g fill="none" stroke="#1d4ed8" strokeWidth="6" strokeLinecap="round">
        <circle cx="60" cy="60" r="44" pathLength="1" className="sk-1b7jnm9-0" />
        <path d="M36 64 L56 84 L88 40" pathLength="1" className="sk-1b7jnm9-0" />
      </g>
    </svg>
  );
}
"
`;
